# UPM

./: .gitignore  Cargo.toml  README.md  package.json
.github/workflows/: rust.yml
config/: default.json
docs/: README.md
index/: official.json
npm/: install.js  package.json  uninstall.js
scripts/: encrypt_groq_key.py
src/: cli.rs  config.rs  database.rs  doctor.rs  downloader.rs  errors.rs  groq.rs  groq_key.rs  logger.rs  main.rs  registry.rs  rollback.rs  setup.rs  verify.rs
src/api/: github.rs  mod.rs
src/package/: index.rs  installer.rs  manifest.rs  mod.rs  resolver.rs
