[package]
name = "upm"
version = "0.1.0"
edition = "2024"
description = "Universal Package Manager - Cross-platform package manager"
authors = ["Distendo"]
license = "MIT"
repository = "https://github.com/Distendo/UPM"

[[bin]]
name = "upm"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
colored = "2"
indicatif = "0.17"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
thiserror = "1"
futures = "0.3"
flate2 = "1"
tar = "0.4"
url = "2"
hex = "0.4"
